--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main id="parent">
 
         <section id="home" class="parallax_home">
-            <div>
+            <div id="home-div">
                 <h1 id="welcome">WELCOME</h1>
                 <h1 id="welcome2">TO MY PERSONAL SPACE</h1>
                 <button id="who" onclick="gotoAbout()">Who are you?</button>
@@ -50,9 +50,7 @@
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                 Molestiae adipisci et magni excepturi quibusdam repudiandae maxime, 
                 veritatis blanditiis enim nam iusto provident aut exercitationem accusamus 
-                nisi asperiores placeat non beatae.
-                <br>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                nisi asperiores placeat non beatae. </p>
             </div>
         </section>
 
@@ -66,10 +64,19 @@
     </main>
 </body>
 <footer id="contact">
-    <p><b>Contact me</b></p>
-    <p>You can send an email at: illescaselmer26@gmail.com</p>
-    <p>Message me on <a href="https://www.facebook.com/elmer.illescas.56/">Facebook</a></p>
-    <p>Check out my <a href="https://github.com/iamEi">Github</a> page</p>
-    <p>Elmer Illescas @ 2021</p>
+    <!-- <p><b>Contact me</b></p> -->
+    <!-- <p>You can send an email at: illescaselmer26@gmail.com</p> -->
+    <!--  <p>Message me on <a href="https://www.facebook.com/elmer.illescas.56/">Facebook</a></p> --> 
+    <!-- <p>Check out my <a href="https://github.com/iamEi">Github</a> page</p> -->
+    <!-- <p>Elmer Illescas @ 2021</p> -->
+    <div>
+        <ul>
+            <li><a href="https://www.facebook.com/elmer.illescas.56/"><img src="css/images/facebook.png" alt="facebook"></a></li>
+
+            <li><a href=""><img src="css/images/gmail.png" alt="gmail"></a></li>
+
+            <li><a href="https://github.com/iamEi"><img src="css/images/github.png" alt="github"></a></li>
+        </ul>
+    </div>
 </footer>
 </html>
