--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Site</title>
     
-    
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,10 +18,10 @@
     <nav class="main-nav">
         <div id="navbar">
             <ul>
-                <li class="nav"><a href="#contact">Contact</a></li>
-                <li class="nav"><a href="#projects">Projects</a></li>
-                <li class="nav"><a href="#about">About</a></li>
-                <li class="nav"><a href="#home">Home</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about">About</a></li>
+                <li id="nav1"><a href="#home">Home</a></li>
             </ul>
         </div>
     </nav>
@@ -65,16 +64,12 @@
     </main>
 </body>
 <footer id="contact">
-    <div class="email">
-        <form class="forms">
-            <h1>Contact Me</h1>
-            <input type="text" placeholder="Name">
-            <input type="email" placeholder="Email">
-            <input id = "message" type="text" placeholder="Enter message here">
-            <input type="submit" value="Submit">
-        </form>
-    </div>
-    <div class="links">
+    <!-- <p><b>Contact me</b></p> -->
+    <!-- <p>You can send an email at: illescaselmer26@gmail.com</p> -->
+    <!--  <p>Message me on <a href="https://www.facebook.com/elmer.illescas.56/">Facebook</a></p> --> 
+    <!-- <p>Check out my <a href="https://github.com/iamEi">Github</a> page</p> -->
+    <!-- <p>Elmer Illescas @ 2021</p> -->
+    <div>
         <ul>
             <li><a href="https://www.facebook.com/elmer.illescas.56/"><img src="css/images/facebook.png" alt="facebook"></a></li>
 
